modified work_list css

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@ CV
 </head>
 
 <body>
-<h1>
+<!-- <h1>
 Haijing Liu
 </h1>
 <section>
@@ -88,4 +88,4 @@ Awards and Honors
 
 </section>
 </body>
-</html>
+</html> -->
